Fix scrollbar, remove links from cards and fix svg in cards

--- a/src/scss/_custom-select.scss
+++ b/src/scss/_custom-select.scss
@@ -53,7 +53,6 @@
   min-width: 270px !important;
   left: 10px !important;
   right: unset !important;
-  min-height: 300px !important;
   &:before {
     content: " ";
     position: absolute;
@@ -86,6 +85,21 @@
       border-radius: 6px;
       display: block;
       border: 1px solid #e4e6eb;
+    }
+  }
+  .dropdown-options {
+    max-height: 200px;
+    overflow: auto;
+    &::-webkit-scrollbar {
+      width: 6px;
+      height: 6px;
+    }
+    &::-webkit-scrollbar-track {
+      background: #f9fafb;
+    }
+    &::-webkit-scrollbar-thumb {
+      background-color: #ccd0d9;
+      border-radius: 20px;
     }
   }
 }
@@ -149,6 +163,6 @@
   background: rgba(111, 106, 248, 0.1);
   margin: 2px 0px;
 }
-.single-column{
+.single-column {
   list-style: none;
 }
